# app-architecture-patterns

./: .gitignore  README.md
MVP/QtWidget/CounterDemo/: .clang-format  .clang-tidy  CMakeLists.txt  CMakePresets.json  ROADMAP.md  Roadmap.md  mock_stand.py  pdf_report.toml  telemetry.toml
MVP/QtWidget/CounterDemo/cmake/: CodeQuality.cmake
MVP/QtWidget/CounterDemo/docs/developer/: qt-threading.md  session-state.md  ui-state-sync.md
MVP/QtWidget/CounterDemo/src/: main.cpp
MVP/QtWidget/CounterDemo/src/Application/: ApplicationContext.hpp
MVP/QtWidget/CounterDemo/src/Application/Dto/: AxisEndpointConfig.hpp  CommandResult.hpp  CounterSnapshot.hpp  PdfDocumentModel.hpp  PdfReportConfig.hpp  PlotModel.hpp  TelemetryConfig.hpp
MVP/QtWidget/CounterDemo/src/Application/Ports/: IAxisProtocolCodec.hpp  IConfigRepository.hpp  ICounterRepository.hpp  IFunctionEngine.hpp  ILogger.hpp  IPdfExporter.hpp  ITelemetryClient.hpp  ITestExecutionScheduler.hpp  ITimerService.hpp
MVP/QtWidget/CounterDemo/src/Application/Services/: AppliedStandImpactSender.cpp  AppliedStandImpactSender.hpp  ControlFunctionWorstCaseAnalyzer.cpp  ControlFunctionWorstCaseAnalyzer.hpp  ControlPlotBuilder.cpp  ControlPlotBuilder.hpp  ControlProfilePreviewService.cpp  ControlProfilePreviewService.hpp  ReadinessDiagnosticMessageBuilder.cpp  ReadinessDiagnosticMessageBuilder.hpp  TelemetryPlotBuilder.cpp  TelemetryPlotBuilder.hpp  TelemetrySessionClock.cpp  TelemetrySessionClock.hpp  UavSpecificationMapper.cpp  UavSpecificationMapper.hpp
MVP/QtWidget/CounterDemo/src/Application/Session/: SessionState.cpp  SessionState.hpp  SessionStateData.hpp  Subscription.cpp  Subscription.hpp
MVP/QtWidget/CounterDemo/src/Application/UseCases/: ApplyAngleOfAttackUseCase.cpp  ApplyAngleOfAttackUseCase.hpp  (+74 more)
MVP/QtWidget/CounterDemo/src/Domain/: AngleOfAttackOscillationPolicy.hpp  AxisControlCommand.hpp  AxisId.hpp  AxisState.hpp  AxisTelemetrySample.hpp  Command.hpp  ControlProfileTiming.hpp  ControlTrace.hpp  Counter.cpp  Counter.hpp  CounterId.hpp  CounterMode.hpp  EffectiveWindDirection.hpp  Expression.hpp  FormulaExpression.hpp  FormulaTemplate.hpp  HybridBeaufortOverride.hpp  Id.hpp  Plot.hpp  Poem.hpp  SafeWindImpactLimitEstimator.hpp  ScenarioExecutionEngine.hpp  StandCommandMapper.hpp  StandConnectionStatus.hpp  StandConnectionTransitions.hpp  StandControlMode.hpp  StandImpactCalculationContext.hpp  StandImpactTransition.hpp  StandScenario.hpp  TelemetryConnectionPolicy.hpp  TelemetryConnectionStatus.hpp  TelemetryPollInterval.hpp  TelemetryStatus.hpp  TelemetryWindow.hpp  TestDurationEstimator.hpp  TestExecutionPlanner.hpp  TestExecutionStatus.hpp  TestExecutionTransitions.hpp  TestModeStatePolicy.hpp  TestProtocol.hpp  (+11 more)
MVP/QtWidget/CounterDemo/src/Infrastructure/: InMemoryCounterRepository.cpp  InMemoryCounterRepository.hpp  QtPdfExporter.cpp  QtPdfExporter.hpp  QtTestExecutionScheduler.cpp  QtTestExecutionScheduler.hpp  QtTextLogger.cpp  QtTextLogger.hpp  QtTimerService.cpp  QtTimerService.hpp  SessionStateQtAdapter.cpp  SessionStateQtAdapter.hpp  SimpleFunctionEngine.hpp  SimpleFunctionEngineStub.hpp
MVP/QtWidget/CounterDemo/src/Localization/: ConfigStrings.hpp  ControlChartsStrings.hpp  PlotStrings.hpp  ReadinessStrings.hpp  ShellStrings.hpp  TelemetryStrings.hpp  TestProtocolStrings.hpp  TransportStrings.hpp  UiStrings.hpp
MVP/QtWidget/CounterDemo/src/Presentation/: IMainView.hpp  IShellView.hpp  MainPresenter.cpp  MainPresenter.hpp  ShellPresenter.cpp  ShellPresenter.hpp
MVP/QtWidget/CounterDemo/src/Ui/: ControlChartsTabWidget.cpp  ControlChartsTabWidget.hpp  ControlChartsTabWidget.ui  MainWindow.cpp  MainWindow.hpp  MainWindow.ui  MainWindowUiAdapter.cpp  MainWindowUiAdapter.hpp  PlotWidget.cpp  PlotWidget.hpp  Tab1Widget.cpp  Tab1Widget.hpp  Tab1Widget.ui  Tab2Widget.cpp  Tab2Widget.hpp  Tab2Widget.ui  Tab3Widget.cpp  Tab3Widget.hpp  Tab3Widget.ui  TelemetryChartsTabWidget.cpp  TelemetryChartsTabWidget.hpp  TelemetryChartsTabWidget.ui  TestProtocolTabWidget.cpp  TestProtocolTabWidget.hpp  TestProtocolTabWidget.ui
MVP/QtWidget/CounterDemo/tests/Application/: AppliedStandImpactSenderTest.cpp  ApplyWindImpactUseCasesTest.cpp  BuildControlPlotUseCaseTest.cpp  CalculateAndBuildControlPlotUseCaseTest.cpp  ConfigureTelemetryUseCaseTest.cpp  ConnectStandUseCaseTest.cpp  ControlFunctionWorstCaseAnalyzerTest.cpp  EstimateTestDurationUseCaseTest.cpp  ExportPdfUseCaseTest.cpp  PauseResumeTestExecutionUseCaseTest.cpp  ReadinessDiagnosticMessageBuilderTest.cpp  SessionStateTest.cpp  SetControlChartsTabMinutesUseCaseTest.cpp  SetOperatorTestDurationUseCaseTest.cpp  SetStandControlModeUseCaseTest.cpp  SetStandImpactUseCaseTest.cpp  SetTelemetryWindowUseCaseTest.cpp  StartTestExecutionUseCaseTest.cpp  StopTestExecutionUseCaseTest.cpp  TelemetryPlotBuilderTest.cpp  UavSpecificationMapperTest.cpp  UpdateTestProtocolUseCaseTest.cpp
MVP/QtWidget/CounterDemo/tests/Domain/: AngleOfAttackOscillationPolicyTest.cpp  AxisControlCommandTest.cpp  ControlProfileTimingTest.cpp  ControlTraceTest.cpp  EffectiveWindDirectionTest.cpp  HybridBeaufortOverrideTest.cpp  SafeWindImpactLimitEstimatorTest.cpp  ScenarioExecutionEngineTest.cpp  StandConnectionTransitionsTest.cpp  StandImpactTransitionTest.cpp  StandScenarioTest.cpp  TelemetryConnectionPolicyTest.cpp  TelemetryPollIntervalTest.cpp  TelemetryWindowTest.cpp  TestDurationEstimatorTest.cpp  TestExecutionPlannerTest.cpp  TestExecutionTransitionsTest.cpp  TestModeStatePolicyTest.cpp  TestProtocolTest.cpp  TimeTest.cpp  WindControlProfileCalculatorTest.cpp  WindControlProfileImpactTest.cpp  WindControlProfileWorstCaseTest.cpp  WindImpactTest.cpp  WindProfileTest.cpp  YawOscillationPolicyTest.cpp
MVP/QtWidget/CounterDemo/tests/Infrastructure/: ConfigTemplateServiceTest.cpp  LegacyAxisProtocolCodecTest.cpp  QtTestExecutionSchedulerTest.cpp  SimpleFunctionEngineTest.cpp  StandTraceFormatterTest.cpp
MVP/QtWidget/CounterDemo/tests/Presentation/: ControlChartsTabPresenterTest.cpp  ShellPresenterTest.cpp
MVP/QtWidget/CounterDemo/tests/Ui/: PlotRendererTest.cpp  PlotWidgetTest.cpp
(+39 files in other folders)
